--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -205,7 +205,8 @@ h6 {
   position: relative;
 }
 
-.navbar-nav .nav-link::after {
+.navbar-nav .nav-link::after,
+.navbar-nav .nav-link.active::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -219,7 +220,7 @@ h6 {
 
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link.active {
-  color: var(--text-primary) !important;
+  color: var(--primary-dark) !important;
 }
 
 .navbar-nav .nav-link:hover::after,
